# aec3-zig

./: .bazeliskrc  .gitignore  AGENTS.md  BUILD  WORKSPACE  build.zig  worklog.md
.github/workflows/: ci.yml
golden_test/: README.md  root.zig
golden_test/rust_support/: Cargo.toml
golden_test/rust_support/src/: gen_aec3_blocks_golden.rs  gen_aec3_delay_est_golden.rs  gen_audio_infra_golden.rs  gen_echo_canceller3_golden.rs  gen_erle_reverb_golden.rs  gen_fft_golden.rs  gen_metrics_leafs_golden.rs  gen_ns_golden.rs  gen_render_delay_golden.rs  gen_suppression_core_golden.rs  main.rs
golden_test/vectors/: rust_aec3_blocks_golden_vectors.txt  rust_aec3_delay_est_golden_vectors.txt  rust_audio_infra_golden_vectors.txt  rust_echo_canceller3_golden_vectors.txt  rust_erle_reverb_golden_vectors.txt  rust_foundation_golden_vectors.txt  rust_metrics_leafs_golden_vectors.txt  rust_ns_golden_vectors.txt  rust_suppression_core_golden_vectors.txt
golden_test/zig/: aec3_blocks.zig  aec3_core.zig  aec3_delay_est.zig  audio_infra.zig  audio_infra_golden.zig  common.zig  echo_canceller3.zig  erle_reverb.zig  fft.zig  fft_golden.zig  fixed_point.zig  foundation.zig  foundation_golden.zig  metrics_leafs.zig  ns.zig  ns_golden.zig  test_utils.zig  (+1 more)
openteam/: plan.md  worklog.md
src/: benchmark.zig  complex.zig  fft_test.zig  fixed_point.zig  foundation_extra_test.zig  foundation_fixed_float_test.zig  numeric_mode.zig  numeric_profile.zig  root.zig  sample_ops.zig  test.zig  test_golden.zig  test_golden_foundation.zig  test_golden_ns.zig
testdata/: rust_fft_golden_vectors.txt  rust_ns_golden_vectors.txt
testdata/rust_support/: Cargo.toml
testdata/rust_support/src/: bench_foundation.rs  gen_fft_golden.rs  gen_ns_golden.rs  main.rs
tests/: golden_generator.rs  rust_bench_foundation
tools/: zig_ns_test.sh  zig_test_runner.sh
(+178 files in other folders)
