[package]
name = "aec3-testdata"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "golden-generator"
path = "src/main.rs"

[[bin]]
name = "bench-foundation"
path = "src/bench_foundation.rs"

[[bin]]
name = "gen-fft-golden"
path = "src/gen_fft_golden.rs"

[[bin]]
name = "gen-audio-infra-golden"
path = "src/gen_audio_infra_golden.rs"

[[bin]]
name = "ns-golden-generator"
path = "src/gen_ns_golden.rs"

[[bin]]
name = "erle-reverb-golden-generator"
path = "src/gen_erle_reverb_golden.rs"

[[bin]]
name = "metrics-leafs-golden-generator"
path = "src/gen_metrics_leafs_golden.rs"

[dependencies]
# Alignment direction: Zig implementation is validated against Rust aec3-rs golden baseline.
# Use a fixed git revision for reproducible golden baseline across environments.
aec3 = { git = "https://github.com/RubyBit/aec3-rs", rev = "667e9a8ede5905c0dce56e4a8b85880a020dd77a" }
